# apartements

./: .gitignore  LICENSE  README.md  app.py  modelx_trace.nc  mycity  pixi.toml  pyproject.toml
assets/data/: SWEETVIZ_REPORT.html  data.ipynb  map.ipynb  prisindex.csv
notebooks/: .mapbox_token  ExpornentialRegression.ipynb  Linearregression.ipynb  PyMc.ipynb  Regression.ipynb  SWEETVIZ_REPORT.html  data.ipynb  map.ipynb  try.ipynb
notebooks/models/: learner.pkl  metadata.json
notebooks/models/models/: trainer.pkl
notebooks/models/models/KNeighborsDist/: model.pkl
notebooks/models/models/KNeighborsUnif/: model.pkl
notebooks/models/models/NeuralNetFastAI/: model-internals.pkl  model.pkl
notebooks/models/models/NeuralNetTorch/: model.pkl
notebooks/models/models/WeightedEnsemble_L2/: model.pkl
notebooks/models/models/WeightedEnsemble_L2/utils/: model_template.pkl  oof.pkl
notebooks/models/models/XGBoost/: model.pkl
notebooks/models/utils/attr/CatBoost/: y_pred_proba_val.pkl
notebooks/models/utils/attr/ExtraTreesMSE/: y_pred_proba_val.pkl
notebooks/models/utils/attr/KNeighborsDist/: y_pred_proba_val.pkl
notebooks/models/utils/attr/KNeighborsUnif/: y_pred_proba_val.pkl
notebooks/models/utils/attr/LightGBM/: y_pred_proba_val.pkl
notebooks/models/utils/attr/LightGBMLarge/: y_pred_proba_val.pkl
notebooks/models/utils/attr/LightGBMXT/: y_pred_proba_val.pkl
notebooks/models/utils/attr/NeuralNetFastAI/: y_pred_proba_val.pkl
notebooks/models/utils/data/: X.pkl  X_val.pkl  y.pkl  y_val.pkl
(+3 files in other folders)
