[tool.poetry]
name = "apartements"
version = "0.1.0"
description = ""
authors = ["Sofie & Prayson  <prayson.wilfred@nttdata.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10, <3.11"
pandas = "^2.1.2"
patsy = "^0.5.3"
httpx = "^0.25.1"
scikit-learn = "^1.3.2"
hiplot = "^0.1.33"
plotly = "^5.18.0"
flaml = { extras = ["automl"], version = "^2.1.1" }
# autogluon = { extras = ["catboost", "lightgbm", "xgboost"], version = "^0.8.2" }
mljar-supervised = "^1.1.1"
deepchecks = "^0.17.5"
bokeh = "^3.3.0"


[tool.poetry.group.dev.dependencies]
watermark = "^2.4.3"
tdqm = "^0.0.1"
ruff = "^0.1.5"
pytest = "^7.4.3"
black = { extras = ["jupyter"], version = "^23.11.0" }
pickleshare = "^0.7.5"


[tool.poetry.group.lab.dependencies]
ipykernel = "^6.26.0"
ipywidgets = ">=7.6.5,<8"
nbformat = "^5.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
